add session and paragraph

--- a/index.html
+++ b/index.html
@@ -8,5 +8,8 @@
 </head>
 <body>
     <h1>Welcome Myatthuta </h1>
+    <section>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Explicabo exercitationem optio id officia quo nulla facilis eaque non ea perspiciatis, suscipit hic consectetur unde doloribus vero iure, voluptatum corporis incidunt?</p>
+    </section>
 </body>
 </html>
